// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`thread-message-feed chat-item snapshot compact styles 1`] = `
<div
  class="chat-item burstStart compact"
>
  <div
    class="chat-item__container"
  >
    <div
      class="chat-item__aside"
    >
      <div
        class="chat-item__avatar"
      >
        <avatar-stub
          size="s"
          user="[object Object]"
        />
      </div>
    </div>
     
    <!---->
     
    <div
      class="chat-item__content"
    >
      <div
        class="chat-item__details"
      >
        <div
          class="chat-item__from js-chat-item-from"
        >
          Tomas Vik
        </div>
         
        <div
          class="chat-item__username js-chat-item-from"
        >
          @viktomas_gitlab
        </div>
         
        <a
          class="chat-item__time js-chat-time"
          title="June 27, 2019 9:30 AM"
        >
          Jun 27 09:30
        </a>
      </div>
       
      <div
        class="chat-item__text js-chat-item-text"
      >
        Example message using a bit of  
        <code>
          code
        </code>
         and 
        <strong>
          bold
        </strong>
         to show how 
        <em>
          markdown
        </em>
         is stored.
      </div>
    </div>
  </div>
</div>
`;

exports[`thread-message-feed chat-item snapshot showing item actions 1`] = `
<div
  class="chat-item burstStart compact"
>
  <div
    class="chat-item__container"
  >
    <div
      class="chat-item__aside"
    >
      <div
        class="chat-item__avatar"
      >
        <avatar-stub
          size="s"
          user="[object Object]"
        />
      </div>
    </div>
     
    <div
      class="chat-item__actions js-chat-item-actions"
    >
      <i
        class="chat-item__icon icon-check chat-item__icon--read js-chat-item-readby"
      />
       
      <i
        class="chat-item__icon icon-ellipsis"
      />
    </div>
     
    <div
      class="chat-item__content"
    >
      <div
        class="chat-item__details"
      >
        <div
          class="chat-item__from js-chat-item-from"
        >
          Tomas Vik
        </div>
         
        <div
          class="chat-item__username js-chat-item-from"
        >
          @viktomas_gitlab
        </div>
         
        <a
          class="chat-item__time js-chat-time"
          title="June 27, 2019 9:30 AM"
        >
          Jun 27 09:30
        </a>
      </div>
       
      <div
        class="chat-item__text js-chat-item-text"
      >
        Example message using a bit of  
        <code>
          code
        </code>
         and 
        <strong>
          bold
        </strong>
         to show how 
        <em>
          markdown
        </em>
         is stored.
      </div>
    </div>
  </div>
</div>
`;

exports[`thread-message-feed chat-item snapshot with default props 1`] = `
<div
  class="chat-item burstStart compact"
>
  <div
    class="chat-item__container"
  >
    <div
      class="chat-item__aside"
    >
      <div
        class="chat-item__avatar"
      >
        <avatar-stub
          size="s"
          user="[object Object]"
        />
      </div>
    </div>
     
    <!---->
     
    <div
      class="chat-item__content"
    >
      <div
        class="chat-item__details"
      >
        <div
          class="chat-item__from js-chat-item-from"
        >
          Tomas Vik
        </div>
         
        <div
          class="chat-item__username js-chat-item-from"
        >
          @viktomas_gitlab
        </div>
         
        <a
          class="chat-item__time js-chat-time"
          title="June 27, 2019 9:30 AM"
        >
          Jun 27 09:30
        </a>
      </div>
       
      <div
        class="chat-item__text js-chat-item-text"
      >
        Example message using a bit of  
        <code>
          code
        </code>
         and 
        <strong>
          bold
        </strong>
         to show how 
        <em>
          markdown
        </em>
         is stored.
      </div>
    </div>
  </div>
</div>
`;
